libs/bng/test/negative/N0303_undefined_compartment_parent.bngl
# FAIL
# OUTPUT: error: Compartment's 'B' parent 'C' was not defined.


begin compartments
   A 2 1 B
   B 2 1 C
end compartments
